--- a/css/common.css
+++ b/css/common.css
@@ -139,3 +139,122 @@ body {
         max-width: 1080px;
     }
 }
+
+
+/* header */
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
+.max-width {
+    max-width: 1110px;
+    padding: 0 15px;
+    margin: auto;
+}
+
+.navbar {
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+    padding: 18px 0;
+    font-family: "Poppins", sans-serif;
+    transition: all 0.3s ease;
+    background-color: #fff;
+}
+
+.navbar .max-width {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar .menu li {
+    list-style: none;
+    display: inline-block;
+}
+
+.navbar .menu li a {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 19px;
+    letter-spacing: -0.02em;
+    color: #25282b;
+    display: block;
+    margin-left: 25px;
+    transition: color 0.3s ease;
+    border-bottom: 3px solid transparent;
+}
+
+.navbar .menu li a:hover {
+    border-bottom: 3px solid #00daff;
+}
+
+.navbar.sticky .menu li a:hover {
+    color: #fff;
+}
+
+.menu-btn {
+    color: #25282B;
+    font-size: 23px;
+    cursor: pointer;
+    display: none;
+}
+
+.menu-btn i {
+    border: 1px solid #C4C4C4;
+    border-radius: 8px;
+    padding: 4px 6px 3px 6px;
+}
+
+.menu.active>li a {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 27px;
+    letter-spacing: -0.02em;
+    color: #25282B;
+}
+
+@media (max-width: 947px) {
+    .menu-btn {
+        display: block;
+        z-index: 999;
+    }
+    .menu-btn i.active:before {
+        content: "\f00d";
+        padding: 1px 1px 0px 1px;
+    }
+    .navbar .menu {
+        position: fixed;
+        height: 100vh;
+        width: 300px;
+        right: -100%;
+        top: 0;
+        background: #F4F6FA;
+        text-align: left;
+        padding: 52px 0 0 40px;
+        transition: all 0.3s ease;
+    }
+    .navbar .menu.active {
+        right: 0;
+    }
+    .navbar .menu li {
+        display: block;
+    }
+    .navbar .menu li a {
+        display: inline-block;
+        margin: 14px 0;
+        border-bottom: none;
+    }
+}
+
+
+/* end header */
